# BusinessCase4

./: .gitignore  README.md  extras.ipynb  main.ipynb  pyproject.toml
artifacts/: comparison_table.md  comparison_table.parquet  cv_folds.parquet  cv_probabilities.parquet  features.parquet  holdout_crisis.parquet  holdout_equity.parquet  holdout_probabilities.parquet  labels.parquet  optuna_adaptive.json  optuna_adaptive_calmar.json  optuna_adaptive_sharpe.json  prices_raw.parquet  risk_appetite.parquet  summary.json
notebooks/: 01_eda_and_stationarity.ipynb  02_walkforward_cv_harness.ipynb  03_detectors_and_stack.ipynb  04_strategy_and_backtest.ipynb  05_explainability_and_negative_results.ipynb  _build_notebooks.py
sentinel_alpha/: __init__.py  baseline.py  compare.py  config.py  run.py
sentinel_alpha/cv/: walkforward.py
sentinel_alpha/data/: loader.py  transforms.py
sentinel_alpha/detectors/: __init__.py  ae_ensemble.py  autoencoder.py  base.py  copod.py  gmm.py  iforest.py  kpca.py  lof.py  mvg.py  supervised.py
sentinel_alpha/eval/: __init__.py  metrics.py
sentinel_alpha/explain/: __init__.py  ae_attribution.py  anomaly_clustering.py  projection.py  shap_stack.py
sentinel_alpha/features/: __init__.py  class_pca.py  engineer.py
sentinel_alpha/stack/: __init__.py  calibrate.py  rank.py  stacker.py
sentinel_alpha/strategy/: __init__.py  backtest.py  continuous.py  gate.py  recovery.py  state_machine.py  tuning.py
sentinel_alpha/tuning/: __init__.py  optuna_adaptive.py
sentinel_alpha/utils/: __init__.py  io.py  seeding.py
tests/: test_backtest_kpis.py  test_calibration.py  test_continuous.py  test_data.py  test_detectors.py  test_features.py  test_projection.py  test_recovery.py  test_stack.py  test_strategy.py  test_walkforward.py
